--- a/.github/workflows/issues.yaml
+++ b/.github/workflows/issues.yaml
@@ -11,14 +11,8 @@ jobs:
       - name: dumping github context
         run: echo '${{ toJSON(github.event) }}' | jq
         shell: bash
-      - name: Create comment
+      - name: Add reactions
         uses: peter-evans/create-or-update-comment@v2
         with:
-          issue-number: ${{ github.event.issue.number }}
-          body: |
-            This is a multi-line test comment
-            - With GitHub **Markdown** :sparkles:
-            - Created by [create-or-update-comment][1]
-
-            [1]: https://github.com/peter-evans/create-or-update-comment
-          reactions: '+1'
+          comment-id: 557858210
+          reactions: heart, hooray, laugh
